data/derived/sp14/progs/unify/prog1448.ml.out
Characters 57-64:
  else clone x::acc n-1;;
       ^^^^^^^
Error: This expression has type int -> 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside int -> 'a list
